--- a/package.json
+++ b/package.json
@@ -1,30 +1,34 @@
 {
-  "name": "payment-widget-smart-contract",
+  "name": "smart-contracts",
   "version": "1.0.0",
-  "description": "",
+  "description": "This repository has the contracts for the payment widget.",
   "main": "truffle.js",
+  "directories": {
+    "test": "test"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/yaronvel/payment-widget-smart-contract.git"
+    "url": "git+https://github.com/KyberNetwork/smart-contracts.git"
   },
   "author": "",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/yaronvel/payment-widget-smart-contract/issues"
+    "url": "https://github.com/KyberNetwork/smart-contracts/issues"
   },
-  "homepage": "https://github.com/yaronvel/payment-widget-smart-contract#readme",
+  "homepage": "https://github.com/KyberNetwork/smart-contracts#readme",
   "dependencies": {
-    "bignumber.js": "^8.0.1",
-    "chai": "^4.2.0",
-    "chai-as-promised": "^7.1.1",
-    "chai-bignumber": "^2.0.2",
-    "mathjs": "^5.2.3",
-    "solc": "^0.4.22",
+    "bignumber.js": "^5.0.0",
+    "compare-versions": "^3.1.0",
+    "mathjs": "^4.3.0",
+    "rlp": "^2.0.0",
+    "solc": "^0.4.18",
     "solhint": "^1.4.0",
-    "truffle": "^4.1.14",
-    "web3": "^1.0.0-beta.36"
+    "truffle": "^4.0.1",
+    "truffle-flattener": "^1.2.5",
+    "web3": "^1.0.0-beta.34",
+    "yargs": "^11.0.0"
   }
 }
