--- a/package.json
+++ b/package.json
@@ -30,5 +30,8 @@
     "truffle-flattener": "^1.2.5",
     "web3": "^1.0.0-beta.34",
     "yargs": "^11.0.0"
+  },
+  "devDependencies": {
+    "solidity-coverage": "^0.4.9"
   }
 }
